// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionFooterContainer Prop Tests with actions should display no actions 1`] = `
<ActionFooterContainer>
  <div
    className="action-footer-container with-actions"
  >
    Some content
  </div>
</ActionFooterContainer>
`;

exports[`ActionFooterContainer Prop Tests without actions should display no actions 1`] = `
<ActionFooterContainer>
  <div
    className="action-footer-container"
  />
</ActionFooterContainer>
`;

exports[`ActionFooterContainer Snapshot Tests should render a footer with some actions 1`] = `
<div
  className="action-footer-container with-actions"
>
  Some actions
</div>
`;

exports[`ActionFooterContainer Snapshot Tests should render an empty footer 1`] = `
<div
  className="action-footer-container"
/>
`;
